test/bad/break-outside-of-loop.bq
def int fun(int n) {
    break;
}
fun(0);
